--- a/ex03/ex03-1.html
+++ b/ex03/ex03-1.html
@@ -17,7 +17,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
-        //전역 컨포넌트
+        //전역 컴포넌트
         Vue.component('app-header',{ 
             template: '<h1>Header</h1>'
         });
