--- a/ex02/ex02-2.html
+++ b/ex02/ex02-2.html
@@ -9,6 +9,8 @@
 <body>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
+        // Vue 인스턴스를 생성하면, API와 속성을 제공해준다.
+        // Vue 인스턴스는 new Vue(); 형식으로 생성한다
         // 인스턴스 속성 , API
         new Vue({
             el:  , // 인스턴스가 그려지는 태그를 정의
