--- a/ex05/ex05.html
+++ b/ex05/ex05.html
@@ -13,6 +13,7 @@
 <body>
     
     <div id="app">
+        <!-- <app-header v-bind:props 속성이름="상위(root) 컴포넌트 data이름"></app-header> -->
         <app-header v-bind:propsdata="message"></app-header>
         <app-content v-bind:propsdata="num"></app-content>
     </div>
